Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- computeId now handles gracefully reserved ids (no more error message)
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- optimizing 'search here', make it much faster than 'search entire site'
- Some JavaScript functions renamed as they are now used for things other than
  just tooltips
  toggleFormTooltip -> toggleElementVisibility
  showFormTooltip   -> showElement