@@ -14,3 +14,4 @@ New internal features:
   just tooltips
   toggleFormTooltip -> toggleElementVisibility
   showFormTooltip   -> showElement
+- using the new CPS Registration Tool.
